k8/service.yml
apiVersion: v1
kind: Service
metadata:
  name: fsl-service
  namespace: fullstack
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: fsl-app
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: fsl-app
  namespace: fullstack
spec:
  serviceName: fsl-service
  replicas: 1
  selector:
    matchLabels:
      app: fsl-app
  template:
    metadata:
      labels:
        app: fsl-app
    spec:
      containers:
        - name: fsl-container
          image: your-docker-image:tag
          ports:
            - containerPort: 8080
